<resources>
    <string name="app_name">LabExam2.2</string>
    <string name="are_you_missing_something">Are you missing something?</string>
    <string name="greetings_from_lostlink_your_one_stop_solution_for_missing_stuff">Greetings from LostLink, your one-stop solution for missing stuff!</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="post_your_items">Post your items</string>
    <string name="just_take_a_picture_and_include_a_few_facts_about_the_lost_item_post_anything_lost_to_help_others_find_it_be_it_a_forgotten_phone_at_a_cafe_or_a_bag_left_on_the_bus">Just take a picture and include a few facts about the lost item. Post anything lost to help others find it, be it a forgotten phone at a cafe or a bag left on the bus.</string>
    <string name="next2">Next</string>
    <string name="skip2">Skip</string>
    <string name="get_started_and_reclaim_your_items">Get started and Reclaim your Items!</string>
    <string name="get_started_by_creating_an_account_and_never_worry_about_losing_your_items_again">Get started by creating an account and never worry about losing your items again.</string>
    <string name="get_started">Get started</string>
    <string name="create_an_account">Create an account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me.</string>
    <string name="sign_up">Sign up</string>
    <string name="todo">TODO</string>
    <string name="get_started_img">get_started_img</string>
    <string name="enter_your_best_email">Enter your best email</string>
    <string name="choose_a_password">Choose a password</string>
    <string name="sign_in">Sign in</string>
    <string name="google_login_icon">google_login_icon</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="enter_password">Enter password</string>
    <string name="found_items">Found Items</string>
    <string name="lost_items">Lost Items</string>
    <string name="user_icon">User_icon</string>
    <string name="home_button">home_button</string>
    <string name="search_button">search_button</string>
    <string name="setting_button">setting_button</string>
    <string name="account_button">account_button</string>
    <string name="hi">Hi!!</string>
    <string name="recent_posts">Recent posts</string>
    <string name="scroller_home">scroller_home</string>
    <string name="recent17">recent17</string>
    <string name="recent21">recent21</string>
    <string name="recent18">recent18</string>
    <string name="recent20">recent20</string>
    <string name="recent22">recent22</string>
    <string name="notification_bell">notification_bell</string>
    <string name="found">Found</string>
    <string name="lost">Lost</string>
    <string name="image_description">Image Description</string>
    <string name="item_found_on_campus">Item found on campus</string>
    <string name="your_name">Your name</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="navitems">navitems</string>
    <string name="item_lost_on_campus">Item Lost on campus</string>
    <string name="log_out">Log out</string>
    <string name="submit">Submit</string>
</resources>