<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F4FF"
    tools:context=".MainActivity7">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="59dp"
        android:layout_height="101dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_modified" />

    <TextView
        android:id="@+id/userNameTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/hi"
        android:textColor="#070707"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome_back"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/userNameTag" />

    <ImageButton
        android:id="@+id/bell_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/rounded_profile_icon"
        android:contentDescription="@string/notification_bell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bell__1_" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_profile_icon"
        android:contentDescription="@string/user_icon"
        app:layoutDescription="@string/user_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/user" />


    <ScrollView
        android:layout_width="322dp"
        android:layout_height="360dp"
        android:layout_marginTop="260dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/your_name"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButton" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="2dp"
                android:autofillHints="your_name"
                android:contentDescription="@string/your_name"
                android:ems="10"
                android:inputType="text"
                android:labelFor="@id/userNameTag"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/email"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextText" />

            <EditText
                android:id="@+id/editTextTextEmailAddress2"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="2dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/password"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

            <EditText
                android:id="@+id/editTextTextPassword3"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="2dp"
                android:ems="10"
                android:inputType="textPassword"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="Phone Number"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="2dp"
                android:ems="10"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="Address"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

            <EditText
                android:id="@+id/editTextTextPostalAddress"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="2dp"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <Button
                android:id="@+id/account_submit_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/accent"
                android:text="@string/submit" />

            <Button
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/accent"
                android:text="@string/log_out" />

        </LinearLayout>
    </ScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        app:backgroundTint="#F3F4FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/nav_home"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="0dp"
            android:backgroundTint="#F3F4FF"
            android:contentDescription="@string/home_button"
            app:srcCompat="@drawable/home__2_" />

        <ImageButton
            android:id="@+id/nav_search"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="73.25dp"

            android:backgroundTint="#F3F4FF"
            app:srcCompat="@drawable/search"
            android:contentDescription="@string/navitems" />

        <ImageButton
            android:id="@+id/imageButton20"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="146.5dp"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/add_11"
            android:contentDescription="@string/navitems" />

        <ImageButton
            android:id="@+id/nav_account"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="280dp"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/navitems"
            app:srcCompat="@drawable/user__3_" />

        <ImageButton
            android:id="@+id/nav_faq"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="219.75dp"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/interrogation__1_"
            android:contentDescription="@string/navitems" />

    </com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>